# firstorder

./: .gitignore  MANIFEST.in  README.md  experiments.ipynb  maximum.p  proof.p  pyproject.toml  transformed.p
src/firstorder/: logic.py
src/firstorder/parser/: tptp.py  tptp_grammar.lark  vampire.py
tests/: conftest.py  test_methods.py
